# golem-rag-rust

./: .env  .env.example  AGENTS.md  Cargo.toml  EMBEDDING_OPTIONS.md  INFRA_SETUP.md  Makefile  RAG_PROPOSAL.md  README.md  architecture.puml  blog_post.md  deploy.sh  docker-compose.yml  golem.yaml  list_s3_files.sh  load_to_postgres.sh  test_embedding.sh  upload_to_s3.sh
.agents/skills/feature-development/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
common-rust/common-lib/: Cargo.toml
common-rust/common-lib/src/: database.rs  embedding_client.rs  lib.rs  models.rs  s3_client.rs
components-rust/golem-rust-rag/: Cargo.toml  golem.yaml
components-rust/golem-rust-rag/.wit/wit/: main.wit
components-rust/golem-rust-rag/src/: database_helper.rs  document.rs  document_agent.rs  embedding_generator.rs  lib.rs  models.rs  s3_document_loader.rs  s3_document_sync_agent.rs  search.rs  search_agent.rs
data/: api_design_principles.txt  artificial_intelligence_ethics.md  blockchain_technology.txt  climate_change_impacts.md  cloud_computing_architecture.txt  cultural_heritage_preservation.md  cybersecurity_fundamentals.md  database_optimization.md  devops_pipeline_guide.txt  entrepreneurial_ecosystems.md  machine_learning_basics.md  mental_health_awareness.md  microservices_patterns.txt  modern_education_systems.md  quantum_computing.md  sample_document_1.txt  sample_document_2.txt  sample_document_3.txt  sustainable_development.txt  technical_specification.md
docs/: feature-implementation-workflow.md
frontend/: package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: DocumentModal.vue  ResultCard.vue  SearchBar.vue  SearchFilters.vue
frontend/src/services/: api.js  api.ts
frontend/src/types/: search.ts
migrations/: 001_initial_schema.sql
scripts/: pre-commit  quality-check.sh
src/: database_helper.rs  document.rs  embedding_generator.rs  lib.rs  models.rs  s3_document_loader.rs  s3_document_sync.rs  s3_document_sync_agent.rs  search.rs  tasks.rs
src/common_lib/: database.rs  embedding_client.rs  mod.rs  s3_client.rs
templates/: feature-plan.md
