[workspace]
resolver = "2"
members = ["components-rust/*", "common-rust/*"]

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]

golem-rust = { version = "1.10.4", features = [
    "export_golem_agentic",
] }
golem-rdbms = "0.0.2"

# Advanced HTTP client, alternative of wstd::http
# golem-wasi-http = { version = "0.1.0", features = ["json"] }

log = { version = "0.4.29", features = ["kv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wstd = {version = "=0.5.4", features = ["default", "json"] }

# RAG and Vector Search dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
