[package]
name = "golem_rust5_rust_main"
version = "0.0.1"
edition = "2024"

[workspace]
exclude = ["old"]

[profile.release]
opt-level = "s"
lto = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
log = { version = "0.4.29", features = ["kv"] }
golem-rust = { version = "2.0.0-dev.6", features = ["export_golem_agentic", "chrono"] }
golem-wasi-http = { version = "0.2.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wstd = { version = "=0.6.5", features = ["default", "json"] }

# RAG and Vector Search dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

# Pattern matching utility
try_match = "0.4"

# S3 Client dependencies
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"