[package]
name = "common-lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
golem-rust = { workspace = true }
golem-wasi-http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }

# RAG and Vector Search dependencies
uuid = { workspace = true }
anyhow = { workspace = true }
try_match = { workspace = true }

# S3 Client dependencies
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
