[package]
name = "golem_rust_rag"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# To use common shared agent definitions, place them in common_lib and uncomment the line below
common-lib = { path = "../../common-rust/common-lib" }

log = { workspace = true }
golem-rust = { workspace = true }
golem-rust-macro = { workspace = true }
golem-wasi-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }

# RAG and Vector Search dependencies
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
try_match = { workspace = true }
futures = "0.3"
chrono = { workspace = true }

# S3 Client dependencies  
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
